--- a/RedLockNet.SERedis/RedLockNet.SERedis.csproj
+++ b/RedLockNet.SERedis/RedLockNet.SERedis.csproj
@@ -31,8 +31,7 @@
 
 	<ItemGroup>
 		<PackageReference Include="StackExchange.Redis" Version="[2.0.513,)" />
-		<PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="[2.0.0,)" />
-		<PackageReference Include="Microsoft.Extensions.Logging" Version="[2.0.0,)" />
+		<PackageReference Include="log4net" Version="[1.2.11,)" />
 	</ItemGroup>
 
 	<ItemGroup>
